tests/errors/semantic/blocking/ex4.py
# pylint: disable=missing-function-docstring, missing-module-docstring/
x is 1
y is None
